project setup re-done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   </head>
 
   <body>
-    <div class="page">TEsting the setup.</div>
+    <div class="page">
+      TEsting the setup.
+      <header></header>
+      <main></main>
+      <footer></footer>
+    </div>
   </body>
 </html>
