project setup re-done

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     <div class="page">
       TEsting the setup.
       <header></header>
-      <main></main>
-      <footer></footer>
+      <main>
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+        <section class="menu"></section>
+        <section class="about"></section>
+      </main>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
