project setup re-done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="page">
       TEsting the setup.
       <header></header>
-      <main>
+      <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
         <section class="menu"></section>
