project setup re-done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="page">
       TEsting the setup.
-      <header></header>
+      <header class="header"></header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
