--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
           </div>
         </section>
 
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="reservation"></section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
