form action was updated

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
-          <form action="" class="reservation__form form">
-            <fieldset class="form__fieldset">
+          <form action="#" class="reservation__form form">
+            <fieldset id="form__fieldset" class="form__fieldset">
               <label for="name" class="form__label form__label_name"
                 >Name *
                 <input
