--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
     <title>TripleTen Coffe Shop Project for sprint 2</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
     <div class="page">
+
       <header class="header">
         <nav class="nav">
           <img
@@ -100,6 +94,7 @@
 
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
+
           <form action="#" class="reservation__form form">
             <fieldset id="form__fieldset" class="form__fieldset">
               <label for="name" class="form__label form__label_name"
@@ -111,6 +106,7 @@
                   placeholder="Name Surname"
                 />
               </label>
+
               <label for="number-of-guests" class="form__label"
                 >Number of guests *
                 <input
@@ -148,10 +144,157 @@
             </label>
           </form>
         </section>
-        <section class="menu" id="menu"></section>
-        <section class="about" id="about"></section>
+
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fraitrade certified beans and
+            use biodegradable cups. All teas from out collections are $2/cups.
+          </p>
+
+          <ul class="menu__cards">
+            <li class="card">
+              <h3 class="card__title">Filter</h3>
+
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Regular (12 oz)
+                  <span class="card__list-divider"></span>$1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
+                <li class="card__list-item">
+                  XL (20 oz)
+                  <span class="card__list-divider"></span>$1.5
+                </li>
+                <li class="card__list-item">
+                  Party-size (24ox, decaf)
+                  <span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Iced Coffe (16 oz)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
+              </ul>
+            </li>
+
+            <li class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato
+                  <span class="card__list-divider"></span>$2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado
+                  <span class="card__list-divider"></span>$2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha
+                  <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Sunrise in the Bay area (decaf)
+                  <span class="card__list-divider"></span>$10
+                </li>
+              </ul>
+            </li>
+
+            <li class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croisaant
+                  <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Banana bread
+                  <span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie
+                  <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake
+                  <span class="card__list-divider"></span>$3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie
+                  <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Fress Bug'uette
+                  <span class="card__list-divider"></span>$0.25
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+
+        <section class="about" id="about">
+          <h2 class="about__title">About the coffee shop</h2>
+
+
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peak Libraray. It feature
+              6 tables and free WiFi.
+            </p class="about__paragraph">
+            <p class="about__paragraph">Our main mission is keeping guest cozy and energized.</p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact - so we
+              don't sell single-use cups. But you can buy one of your reusable
+              cups!
+            </p>
+          </div>
+
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blured"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+
+
+      <footer class="footer" id="footer">
+
+        <div class="footer__content">
+
+          <div class="footer__logo">
+            <img src="./images/logo_coffeeshop_light.svg">
+          </div>
+
+          <div class="social-media">
+            <h3 class="footer__social-heading">Social media</h3>
+
+              <ul class="footer__list">
+
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./images/facebook_white.svg"
+                      alt="Facebook logo"
+                      class="footer__social-icon ">
+                      Facebook
+                  </a>
+               </li>
+
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./images/instagram_white.svg"
+                      alt="Instagram logo"
+                      class="footer__social-icon">
+                      Instagram
+                  </a>
+               </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&copy; 2023 Mohammad Alam</p>
+
+      </footer>
+
     </div>
   </body>
 </html>
