Sprint 2 Final project spell error corrected.

--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
 
           <div class="about__content">
             <p class="about__paragraph">
-              Our coffee shop is located in the Triple Peak Libraray. It feature
+              Our coffee shop is located in the Triple Peak Library. It feature
               6 tables and free WiFi.
             </p class="about__paragraph">
             <p class="about__paragraph">Our main mission is keeping guest cozy and energized.</p>
             <p class="about__paragraph">
-              Besides that, we try to reduce our environmental impact - so we
-              don't sell single-use cups. But you can buy one of your reusable
+              Besides that, we try to reduce our environmental impact -- so we
+              don't sell single-use cups. But you can buy one of our reusable
               cups!
             </p>
           </div>
