fixed mistakes. updated code.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <body>
     <div class="page">
-
       <header class="header">
         <nav class="nav">
           <img
@@ -29,13 +28,14 @@
             <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
+
         <h1 class="header__title">
           <span class="header__span-accent">Specialty coffee</span> in the
           Triple Peaks Libraray
         </h1>
         <p class="header__description">
-          Welcome to our study zone! We've got the coffe to energize you and the
-          cozy vibes to help you get creative.
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
         </p>
         <img
           src="../images/inside_coffee_shop.png"
@@ -45,12 +45,12 @@
 
         <div class="header__footer">
           <div>
-            <p class="header__paragraph">Hours</p>
+            <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday-Friday (10:00-19:00)</p>
             <p class="header__paragraph">Saturday-Sunday (11:00-18:00)</p>
           </div>
           <p class="header__paragraph">
-            200 Success Avenue, The Touwn of Triple Peaks
+            200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
       </header>
@@ -59,7 +59,7 @@
         <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
-            Checkout some recipes we've collected for your home-brewing
+            Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
           <div class="recipes__videos">
@@ -149,8 +149,8 @@
           <h2 class="menu__title">Menu</h2>
 
           <p class="menu__subtitle">
-            We brew coffee from locally roasted, Fraitrade certified beans and
-            use biodegradable cups. All teas from out collections are $2/cups.
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collections are $2/cups.
           </p>
 
           <ul class="menu__cards">
@@ -238,13 +238,16 @@
         <section class="about" id="about">
           <h2 class="about__title">About the coffee shop</h2>
 
-
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Triple Peak Library. It feature
               6 tables and free WiFi.
-            </p class="about__paragraph">
-            <p class="about__paragraph">Our main mission is keeping guest cozy and energized.</p>
+            </p>
+
+            <p class="about__paragraph">
+              Our main mission is keeping guest cozy and energized.
+            </p>
+
             <p class="about__paragraph">
               Besides that, we try to reduce our environmental impact -- so we
               don't sell single-use cups. But you can buy one of our reusable
@@ -257,44 +260,42 @@
         </section>
       </main>
 
-
       <footer class="footer" id="footer">
-
         <div class="footer__content">
-
           <div class="footer__logo">
-            <img src="./images/logo_coffeeshop_light.svg">
+            <img src="./images/logo_coffeeshop_light.svg" />
           </div>
 
           <div class="social-media">
             <h3 class="footer__social-heading">Social media</h3>
 
-              <ul class="footer__list">
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook logo"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
 
-                <li class="footer__list-item">
-                  <a href="#" class="footer__social-link">
-                    <img src="./images/facebook_white.svg"
-                      alt="Facebook logo"
-                      class="footer__social-icon ">
-                      Facebook
-                  </a>
-               </li>
-
-                <li class="footer__list-item">
-                  <a href="#" class="footer__social-link">
-                    <img src="./images/instagram_white.svg"
-                      alt="Instagram logo"
-                      class="footer__social-icon">
-                      Instagram
-                  </a>
-               </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram logo"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
             </ul>
           </div>
         </div>
         <p class="footer__copyright">&copy; 2023 Mohammad Alam</p>
-
       </footer>
-
     </div>
   </body>
 </html>
