--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <input
                   type="text"
                   id="name"
-                  class="form__input form__input_id_name"
+                  class="form__input"
                   placeholder="Name Surname"
                   required
                 />
@@ -152,7 +152,7 @@
                 />
               </label>
             </fieldset>
-            <button type="button" class="form__button">Book a table</button>
+            <button type="submit" class="form__button">Book a table</button>
 
             <label for="checkbox" class="form__label form__label_type_checkbox">
               <input
@@ -202,7 +202,7 @@
               </ul>
             </li>
 
-            <li class="card">
+            <li class="menu__card">
               <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -224,7 +224,7 @@
               </ul>
             </li>
 
-            <li class="card">
+            <li class="menu__card">
               <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -277,7 +277,7 @@
           </div>
 
           <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation_blured"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
 
